# moltmirror

./: .gitignore  ANALYSIS.md  Caddyfile  DEPLOYMENT.md  Dockerfile  README.md  SYSTEM_OVERVIEW.md  api.py  background_analysis.py  cloud-init.sh  docker-compose.yml  main.py  moltanalyze.py  nginx.conf  pyproject.toml  requirements.txt  update.sh
analysis/: __init__.py  alerts.py  authorship.py  coordination.py  embeddings.py  fingerprints.py  graphs.py  information_flow.py  llm_fingerprints.py  matrices.py  narratives.py  persona_consistency.py  same_operator.py  social_dynamics.py  temporal.py
scraper/: archive.py  comprehensive_archive.py  explore.py  fetch_all_comments.py  fetch_all_posts.py  incremental_update.py  launch_workers.py  parallel_archive.py  proxy_config.py  worker.py
static/: index.html
