[project]
name = "moltmirror"
version = "0.1.0"
description = "Moltbook data analysis and vector search"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "aiofiles>=23.0.0",
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "requests>=2.31.0",
    "sentence-transformers>=3.0.0",
    "numpy>=1.26.0",
    "tqdm>=4.66.0",
    "click>=8.1.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.5.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
]
